# FAME

./: CMakeLists.txt  README.md
example/: .gitignore  README.md  h2_0.5.pheno  small.bim  target.txt
example/multi-bin/: multi-annot.txt  small.multi.results  test.sh
example/single-bin/: README.md  small.single.results  test.sh
include/: arguments.h
pipeline/: README.md  estimation_res.sh  fake_ld.bed  generate_ld_annotations.py  linear_regression_annotation.py  run_fame_pipeline.sh  sig.index.summary.txt
pipeline/results/: 10.h2_0.5.pheno.res.out.full.txt  10.h2_0.5.pheno.res.out.txt  5.h2_0.5.pheno.res.out.full.txt  5.h2_0.5.pheno.res.out.txt
src/: .ge_and_jack_cov.cpp.swp  FAME.cpp  FAME_dev.cpp  README.txt  ge_and_jack.cpp  ge_and_jack_cov.cpp  gg_asymp_se_dev.cpp
